@@ -3,6 +3,7 @@ package persistence;
 import io.ebean.Finder;
 import recommender.VacuumCleanerModel;
 
+import java.util.stream.Collectors;
 import java.util.List;
 
 public class VacuumCleanerFinder extends Finder<String, VacuumCleanerEntity> {
@@ -14,6 +15,6 @@ public class VacuumCleanerFinder extends Finder<String, VacuumCleanerEntity> {
     public List<VacuumCleanerModel> findAll() {
         return query().findList().stream()
                 .map(VacuumCleanerModel::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
